--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".app.activity.MainActivity">
+    tools:context=".app.activity.RecipesActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/head"
