--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -58,125 +58,165 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:paddingHorizontal="16dp"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/head">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/recipeImage"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:contentDescription="@string/recipe_image"
-            android:scaleType="centerCrop"
-            android:src="@drawable/recipe_preview"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/BottomRoundedImageView" />
+            android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/firstInfo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recipeImage">
-
-            <TextView
-                android:id="@+id/cookingTime"
-                android:layout_width="0dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/mainInfo"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/epilogue"
-                android:textColor="@color/dark"
-                android:textSize="18sp"
-                tools:text="Ready in 25 minutes" />
-
-            <TextView
-                android:id="@+id/servings"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/epilogue"
-                android:gravity="end"
-                android:textColor="@color/dark"
-                android:textSize="18sp"
-                tools:text="Servings: 4" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/firstInfo">
-
-            <LinearLayout
-                android:id="@+id/healthScore"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:layout_marginEnd="10dp"
+                android:layout_marginTop="16dp"
                 android:orientation="vertical"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="8dp"
-                android:background="@drawable/rounded_shape_16">
+                android:paddingHorizontal="16dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/recipeImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:contentDescription="@string/recipe_image"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/recipe_preview"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:shapeAppearanceOverlay="@style/BottomRoundedImageView" />
+
+                <LinearLayout
+                    android:id="@+id/firstInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/recipeImage">
+
+                    <TextView
+                        android:id="@+id/cookingTime"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/epilogue"
+                        android:textColor="@color/dark"
+                        android:textSize="18sp"
+                        tools:text="Ready in 25 minutes" />
+
+                    <TextView
+                        android:id="@+id/servings"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/epilogue"
+                        android:gravity="end"
+                        android:textColor="@color/dark"
+                        android:textSize="18sp"
+                        tools:text="Servings: 4" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/healthScore"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/rounded_shape_12_white"
+                    android:orientation="vertical"
+                    android:paddingHorizontal="8dp"
+                    android:paddingVertical="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/firstInfo">
+
+                    <TextView
+                        android:id="@+id/healthScoreText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/epilogue"
+                        android:textColor="@color/dark"
+                        android:textSize="14sp"
+                        tools:text="HealthScore: 85%" />
+
+                    <ImageView
+                        android:id="@+id/healthScoreBar"
+                        android:layout_width="match_parent"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="6dp"
+                        android:contentDescription="@string/bar"
+                        android:src="@drawable/rounded_shape_12" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/spoonacularScore"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/rounded_shape_12_white"
+                    android:orientation="vertical"
+                    android:paddingHorizontal="8dp"
+                    android:paddingVertical="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/healthScore">
+
+                    <TextView
+                        android:id="@+id/spoonacularScoreText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/epilogue"
+                        android:textColor="@color/dark"
+                        android:textSize="14sp"
+                        tools:text="spoonacularScore: 90" />
+
+                    <ImageView
+                        android:id="@+id/spoonacularScoreBar"
+                        android:layout_width="match_parent"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="6dp"
+                        android:contentDescription="@string/bar"
+                        android:src="@drawable/rounded_shape_12" />
+
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:orientation="vertical"
+                android:paddingHorizontal="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/mainInfo">
 
                 <TextView
-                    android:id="@+id/healthScoreText"
+                    android:id="@+id/ingredientsHead"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/epilogue"
-                    android:textColor="@color/dark"
-                    android:textSize="12sp"
-                    tools:text="HealthScore: 85%" />
+                    android:paddingTop="20dp"
+                    android:paddingBottom="12dp"
+                    android:text="@string/ingredients"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/healthScoreBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:src="@drawable/rounded_shape_12"
-                    android:contentDescription="@string/bar"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/spoonacularScore"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:orientation="vertical"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="8dp"
-                android:background="@drawable/rounded_shape_16">
-
-                <TextView
-                    android:id="@+id/spoonacularScoreText"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/ingredientsRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/epilogue"
-                    android:textColor="@color/dark"
-                    android:textSize="12sp"
-                    tools:text="spoonacularScore: 90" />
+                    android:orientation="vertical"
+                    android:nestedScrollingEnabled="false"
+                    android:overScrollMode="never"
+                    app:layout_constraintTop_toBottomOf="@+id/ingredientsHead" />
 
-                <ImageView
-                    android:id="@+id/spoonacularScoreBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:src="@drawable/rounded_shape_12"
-                    android:contentDescription="@string/bar"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
